<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_5"
    android:id="@+id/paginadeinicio"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logonuevo22"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pais"
        android:textColor="@color/black"
        android:background="#30ffffff"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"







        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direccin"
        android:textColor="@color/black"
        android:background="#30ffffff"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"







        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tlf"
        android:textColor="@color/black"
        android:background="#30ffffff"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:inputType="number"
        android:padding="20dp"









        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipdoc"
        android:textColor="@color/black"
        android:background="#30ffffff"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"









        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nrodoc"
        android:textColor="@color/black"
        android:background="#30ffffff"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:inputType="number"









        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/listo"
        android:layout_gravity="center"

        />









</LinearLayout>

