<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_5"
    android:id="@+id/paginadeinicio"
    tools:context=".MainActivity">





    <ImageView
        android:layout_width="190dp"
        android:layout_height="200dp"
        android:src="@drawable/logonuevo22"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:textColor="@color/black"
      android:background="#30ffffff"
      android:textColorHint="@color/black"
      android:layout_margin="10dp"
      android:padding="20dp"







      />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:background="#30ffffff"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:inputType="textPassword" />



    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/inicios"
        android:layout_gravity="center"

        />

  <Button
      android:id="@+id/btn_1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:onClick="buttom1"
      android:text="@string/registro" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="¿Olvidaste tu contraseña?"
        android:layout_gravity="center"
        android:textColor="@color/white"
        />









</LinearLayout>



